# newtype-example

./: LICENSE  README.md  newtype-example.cabal  stack.yaml
app/: Main.hs
