name:                newtype-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mitsuji/newtype-example#readme
license:             BSD3
license-file:        LICENSE
author:              Takamasa Mitsuji
maintainer:          tkms@mitsuji.org
copyright:           2017 Takamasa Mitsuji
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable newtype-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mitsuji/newtype-example
